[project]
name = "arturito"
version = "0.1.0"
description = "Arturito is a Python library"
authors = [{ name = "Matias", email = "sanchezgaviermatias@gmail.com" }]
license = { text = "MIT" }
keywords = ["fun"]

dependencies = ["pandas"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
